--- a/gentle-response-hub/index.html
+++ b/gentle-response-hub/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,7 +7,11 @@
     <meta property="og:title" content="gentle-response-hub" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap"
+    />
+    <link rel="icon" href="happiness.png" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
